--- a/src/index.css
+++ b/src/index.css
@@ -12,14 +12,88 @@ code {
     monospace;
 }
 
-image {
-  position: relative;
-  width: 100%; /* for IE 6 */
-}
-
 h4 {
   position: absolute;
   top: 200px;
   left: 0;
   width: 100%;
+}
+
+/* Container holding the image and the text */
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+/* Bottom left text */
+.bottom-left {
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
+}
+
+/* Top left text */
+.top-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+}
+
+/* Top right text */
+.top-right {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+}
+
+/* Bottom right text */
+.bottom-right {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+}
+
+/* Centered text */
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Top centered text */
+.top-centered {
+  top: 20px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  right: 0;
+  padding: 0 5px;
+  font-family: impact;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000,
+    -2px 2px 0 #000, 0px 2px 0 #000, 2px 0px 0 #000, 0px -2px 0 #000,
+    -2px 0px 0 #000, 2px 2px 5px #000;
+}
+
+/* Top centered text */
+.bot-centered {
+  bottom: -10px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  right: 0;
+  padding: 0 5px;
+  font-family: impact;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000,
+    -2px 2px 0 #000, 0px 2px 0 #000, 2px 0px 0 #000, 0px -2px 0 #000,
+    -2px 0px 0 #000, 2px 2px 5px #000;
 }
